<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clase04</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title1">Ingrese</string>
    <string name="usu">Usuario: </string>
    <string name="pass">Password: </string>
    <string name="btn">Ingresar</string>
    <string name="btn2">Registrese</string>
    <string name="lblbienvenida">Bienvenido a Quebu!!</string>

</resources>
