<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/celeste"
        android:gravity="center" >

        <TextView
            android:id="@+id/txtdescrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtusu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/celeste"
        android:gravity="center" >

        <TextView
            android:id="@+id/lblusu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txtpass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@color/plomo"
            android:text="@string/btn"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/btnreg"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@color/plomo"
            android:text="@string/btn2"
            android:textColor="@color/blanco" />

    </LinearLayout>
    
</LinearLayout>
